--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <img src="images/profile..jpg">
                     <div>
                         <p>株式会社烈丸</p>
-                        <a href="#">プロフィールへ</a>
+                        <a href="#">プロフィール</a>
                     </div>
                 </div>
                 <hr>
