--- a/signin.html
+++ b/signin.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="Devcrud">
-    <title>きらくがき</title>
+    <title>サインイン</title>
 	<link rel="stylesheet" href="css/signin.css">
     <link rel="shortcut icon" href="assets/imgs/titlelogo.png" type="image/x-icon">
 
