--- a/title.html
+++ b/title.html
@@ -12,8 +12,8 @@
 <body>
     <div class="title-word">
         <form action="signin.html" method="post">
-        <h1>クリエイティブギャラリーへようこそ</h1>
-        <button type="submit" class="btn">スタート</button>
+        <h1>きらくがきへようこそ</h1>
+        <button type="submit" class="btn">始める</button>
     </form>
     </div>
 </body>
