--- a/title.html
+++ b/title.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Devcrud">
     <title>きらくがき</title>
 	<link rel="stylesheet" href="css/signin.css">
-    <link rel="shortcut icon" href="assets/imgs/titlelogo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/imgs/title.PNG" type="image/x-icon">
 
 </head>
 <body>
