--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="images/titlelogo.png" type="image/x-icon">
 
     <title>きらくがき</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="shortcut icon" href="images/title.PNG" type="image/x-icon">
+    
 </head>
 <body>
 
