--- a/tos.html
+++ b/tos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>利用規約</title>
+    <link rel="shortcut icon" href="images/title.PNG" type="image/x-icon">
 </head>
 <body>
     
