--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     
 </head>
 <body>
-
+<!-- header -->
     <nav>
         <div class="nav-left">
-            <img  src="images/logo.png" class="logo">
+            <a href="post.html">らくがき投稿</a>
             <ul>
                 <li><img  src="images/home.png"></li>
                 <li><img  src="images/setting.png"></li>
