--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
 <!-- header -->
     <nav>
         <div class="nav-left">
-            <a href="post.html">らくがき投稿</a>
+            <img  src="images/title.PNG" alt="home" width="100" height="50">
             <ul>
-                <li><img  src="images/home.png"></li>
-                <li><img  src="images/setting.png"></li>
+                <li><a href="post.html">らくがき投稿</a></li>
                 <li><img  src="images/notification.png"></li>
             </ul>
         </div>
@@ -59,13 +58,19 @@
                 <div class="settings-links">
                     <div class="user-profile">
                         <img src="images/contract.png" class="settings-icons">                    
-                        <a href="login.html">利用契約</a>  
+                        <a href="tos.html">利用契約</a>  
                     </div>
                 </div>
                 <div class="settings-links">
                     <div class="user-profile">
                         <img src="images/help.png" class="settings-icons">                    
-                        <a href="#">ヘルプ</a>  
+                        <a href="help.html">ヘルプ</a>  
+                    </div>
+                </div>
+                <div class="settings-links">
+                    <div class="user-profile">
+                        <img src="images/setting_icon.png" class="settings-icons">                    
+                        <a href="setting.html">設定</a>  
                     </div>
                 </div>
                 <div class="settings-links">
@@ -200,7 +205,7 @@
 
 
     </div>
-<script src="/js/script.js"></script>
+<script src="js/script.js"></script>
 </body>
 
 </html>
