--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img  src="images/title.PNG" alt="home" width="100" height="50">
             <ul>
                 <li><a href="post.html">らくがき投稿</a></li>
-                <li><img  src="images/notification.png"></li>
+                <li><img  src="images/alarm_24.png"></li>
             </ul>
         </div>
         <div class="nav-right">
