--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
             </div>
     
             <div class="imp-links">
-                <a href="#"><img src="images/new.png" alt="">新作品</a>
-                <a href="#"><img src="images/famous.png" alt="">大人気</a>
+                <a href="#"><img src="images/new.png" alt="">最新</a>
+                <a href="#"><img src="images/famous.png" alt="">急上昇</a>
                 <a href="#"><img src="images/follow.png" alt="">フォロー中</a>
-                <a href="#"><img src="images/save.png" alt="">保存</a>
+                <a href="#"><img src="images/save.png" alt="">お気に入り</a>
                 <a href="#">See More</a>
 
             </div>
