--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container-fluid">
-            <a class="nav-left" href="index.html">きらくがき</a>
+            <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="Bootstrap 5 logo" class="d-inline-block align-top" width="56" height="56"></a>
+            
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -24,64 +25,38 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#"><img src="images/notification.png" alt=""></a>
+                        <a class="nav-link active" aria-current="page" href="#">Notification</a>
                     </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" >
+                          ユーザ
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                          <li>
+                            <a class="dropdown-item" href="#"><img src="images/userpic.png" class="settings-icons">ユーザ</a>
+                        </li>
+                          <li>
+                            <a class="dropdown-item" href="#"><img src="images/usersetting.png" class="settings-icons">個人情報</a>
+                        </li>
+                          <li><hr class="dropdown-divider"></li>
+                          <li>
+                            <a class="dropdown-item" href="#">
+                                <img src="images/help.png" class="settings-icons">ヘルプ</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="login.html"><img src="images/logout.png" class="settings-icons">ログアウト</a>
+                        </li>
+                        </ul>
+                      </li>
                 </ul>
-                <form class="nav-right">
+                <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="検索。。。" aria-label="Search">
                     <button><img src="images/search.png" alt=""></button>
                 </form>
             </div>
         </div>
-        <div class="nav-user-icon online" onclick="settingsMenuToggle()">
-            <img src="images/profile..jpg">
-
-        </div>
-
     </nav>
-        <!--settings menu-->
-        <div class="settings-menu">
-            <div id="white-btn">
-                <span></span>
-            </div>
-            <div class="settings-menu-inner">
-                <div class="user-profile">
-                    <img src="images/profile..jpg">
-                    <div>
-                        <p>株式会社烈丸</p>
-                        <a href="#">プロフィールへ</a>
-                    </div>
-                </div>
-                <hr>
-                <div class="user-profile">
-                    <img src="images/usersetting.png">
-                    <div>
-                        <p>個人情報</p>
-                        <a href="#">情報変更</a>
-                    </div>
-                </div>
-                <hr>
-                <div class="settings-links">
-                    <div class="user-profile">
-                        <img src="images/contract.png" class="settings-icons">
-                        <a href="login.html">利用契約</a>
-                    </div>
-                </div>
-                <div class="settings-links">
-                    <div class="user-profile">
-                        <img src="images/help.png" class="settings-icons">
-                        <a href="#">ヘルプ</a>
-                    </div>
-                </div>
-                <div class="settings-links">
-                    <div class="user-profile">
-                        <img src="images/logout.png" class="settings-icons">
-                        <a href="login.html">ログアウト</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </nav>
+
     <div class="container">
         <!--left sidebar-->
         <div class="left-sidebar">
@@ -207,6 +182,7 @@
 
     </div>
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 
 </html>
