--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
         <form action="index.html" method="post">
             <h1>ログイン</h1>
             <div class="input-box">
-                <input type="text" placeholder="ユーザ名" required>
+                <input type="email" placeholder="ユーザ名" required>
             </div>
             <div class="input-box">
                 <input type="password" placeholder="パスワード" required>
