--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                           <li>
-                            <a class="dropdown-item" href="#"><img src="images/userpic.png" class="settings-icons">ユーザ</a>
+                            <a class="dropdown-item" href="user.html"><img src="images/userpic.png" class="settings-icons">ユーザ</a>
                         </li>
                           <li>
                             <a class="dropdown-item" href="#"><img src="images/usersetting.png" class="settings-icons">個人情報</a>
                         </li>
                           <li><hr class="dropdown-divider"></li>
                           <li>
-                            <a class="dropdown-item" href="#">
+                            <a class="dropdown-item" href="help.html">
                                 <img src="images/help.png" class="settings-icons">ヘルプ</a>
                         </li>
                         <li>
